Implement naive solution to ThreeSum