@@ -1,6 +1,6 @@
 package com.albin.neetcode;
 
-import java.util.List;
+import java.util.*;
 
 /**
  * <a href="https://neetcode.io/problems/three-integer-sum/question?list=neetcode150">NeetCode: 3Sum</a>
@@ -8,6 +8,17 @@ import java.util.List;
 public class ThreeSum {
 
     public List<List<Integer>> threeSum(int[] nums) {
-        return List.of();
+        Set<List<Integer>> threeSums = new HashSet<>();
+        Arrays.sort(nums);
+        for (int i = 0; i < nums.length; i++) {
+            for (int j = i + 1; j < nums.length; j++) {
+                for (int k = j + 1; k < nums.length; k++) {
+                    if (nums[i] + nums[j] + nums[k] == 0) {
+                        threeSums.add(Arrays.asList(nums[i], nums[j], nums[k]));
+                    }
+                }
+            }
+        }
+        return new ArrayList<>(threeSums);
     }
 }
